# CV

./: OpenCV-filter.ipynb  pyproject.toml  random-image.ipynb
cv-course5-main/: README.md  circles-detection.ipynb  hough-transform.ipynb  lanes-detection.ipynb  params-space.ipynb  pyproject.toml  simple-lines-detection.ipynb
